Reverse the expected and actual for unit tests i wrote
Summary:
I realized buck unit test's expected and actual have a different order than the mockito ones in fbandroid. So i've been writing them in reverse order all the time.

I went through all the tests i wrote for buck, and reversed the order back

Reviewed By: bobyangyf

fbshipit-source-id: d8ae1a464ca3598c1b198e76ec330fe680973a12